# httpbin-proto-mock

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
generator/: Cargo.toml
generator/src/: main.rs
handlers/: Cargo.toml
handlers/src/: anything.rs  auth.rs  caching.rs  compression.rs  cookies.rs  delay.rs  forms.rs  http_methods.rs  images.rs  inspection.rs  lib.rs  redirect.rs  response_formats.rs  status.rs  streaming.rs  types.rs  utils.rs
mocks/: Cargo.toml
mocks/src/: adapter.rs  any.rs  h1.rs  h2.rs  h3.rs  lib.rs
openapi/: httpbin-proto.yaml
server/: Cargo.toml
server/src/: main.rs  server_impl.rs
