[workspace]
members = [
    "generator",
    "handlers",
    "server",
    "mocks",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
anyhow = "1.0"

# Speed up dev builds
[profile.dev]
debug = 0
split-debuginfo = "unpacked"
